# todo

./: Cargo.toml  README.md  todo.db
example/: example-usage.webm
frontend/: index.html
frontend/css/: style.css
frontend/js/: main.js
migrations/2023-01-17-192230_entry/: up.sql
src/: db.rs  entry.rs  main.rs  schema.rs
