[package]
name = "todo"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.0-rc.2", default-features = false, features = ["json", "uuid"] }
diesel = { version = "2.0.2",  default-features = false, features = ["sqlite", "r2d2"] }
uuid = { version = "1.2.2", default-features = false, features = ["v4"] }
rocket_cors = { git = "https://github.com/lawliet89/rocket_cors.git", default-features = false, rev = "c17e8145baa4790319fdb6a473e465b960f55e7c" }


